# solarboat

./: .gitignore  CONFIGURATION.md  CONFIG_FILE_IMPLEMENTATION_PLAN.md  Cargo.toml  LICENSE  PARALLEL_PROCESSING_ACTION_PLAN.md  README.md  action.yml  example-solarboat.json  example-solarboat.yml  variables.tf
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
scripts/: update-homebrew.sh
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/commands/: mod.rs
src/commands/apply/: execute.rs  helpers.rs  mod.rs
src/commands/plan/: execute.rs  helpers.rs
src/commands/scan/: execute.rs  helpers.rs  mod.rs
src/config/: loader.rs  mod.rs  resolver.rs  settings.rs  types.rs
src/utils/: display_utils.rs  error.rs  logger.rs  mod.rs  parallel_processor.rs  scan_utils.rs  terraform_background.rs  terraform_operations.rs
tests/: config_integration_tests.rs  parallel_processing_tests.rs
